# PE-Sleuth

./: Claude.md  DeepSeek_V4_Pro_迁移方案.md  PE-Sleuth_代码文档.md  PE-Sleuth_设计思路.html  Taskfile.yml  api_client.py  batch_decompile_ida.py  classify_from_c_code.py  en_US.txt  pipeline.py  pyproject.toml  requirements.txt  settings.json.bak
scripts/: clean.ps1  run_decompile.ps1
